@@ -1,13 +1,15 @@
-# $NetBSD: Makefile,v 1.1.1.1 2003/01/01 07:03:40 jlam Exp $
+# $NetBSD: Makefile,v 1.2 2003/01/02 06:40:32 jlam Exp $
 
 .include "../iasp/Makefile.common"
 
 PKGNAME=	iasp-${IASP_VERSION}
+PKGREVISION=	1
 COMMENT=	Instant ASP: Java implementation of Active Server Pages
 
 WRKSRC=		${WRKDIR}/${IASP_DIR}
 
 SCRIPTS_ENV+=	CAT=${CAT:Q}
+SCRIPTS_ENV+=	CHMOD=${CHMOD:Q}
 SCRIPTS_ENV+=	ECHO=${ECHO:Q}
 SCRIPTS_ENV+=	SED=${SED:Q}
 SCRIPTS_ENV+=	SH=${SH:Q}
@@ -15,7 +17,17 @@ SCRIPTS_ENV+=	IASP=${IASP_DESTDIR}
 FILES_SUBST=	IASP=${IASP_DESTDIR}
 PLIST_SUBST=	IASP=${IASP_DESTDIR:S/^${PREFIX}\///}
 
-OWN_DIRS=	${IASP_DESTDIR} ${IASP_DESTDIR}/logs
+IASP_USER?=	${APACHE_USER}
+IASP_GROUP?=	${APACHE_GROUP}
+BUILD_DEFS+=	IASP_USER IASP_GROUP
+FILES_SUBST+=	IASP_USER=${IASP_USER}
+FILES_SUBST+=	IASP_GROUP=${IASP_GROUP}
+
+PKG_USERS=	${IASP_USER}:${IASP_GROUP}
+PKG_GROUPS=	${IASP_GROUP}
+
+OWN_DIRS=	${IASP_DESTDIR}
+OWN_DIRS_PERMS=	${IASP_DESTDIR}/logs ${IASP_USER} ${IASP_GROUP} 0750
 CONFDIR=	${IASP_DESTDIR}/properties
 SFILES=		cdonts.properties	dbserver.properties
 SFILES+=	ejb.properties		loadbalance.properties
